# blunt

./: .gitignore  AGENTS.md  Makefile  PRD.md  README.md  progress.txt  pyproject.toml  requirements.txt  setup.py  tkts.pyproject.toml
cal/: __main__.py
clients/confluent/: __init__.py  __main__.py  metrics_now.py  requirements.txt
clients/confluent/ops/: __main__.py
clients/confluent/stakeholders/: __main__.py
clients/databricks/: __main__.py
clients/databricks/impact/: __init__.py  __main__.py
clients/databricks/query/: __main__.py
clients/datadog/: __init__.py  __main__.py
clients/fivetran/: fivetran_connections.py  fivetran_tables.py
clients/github/: __init__.py  __main__.py
clients/pagerduty/: __init__.py  __main__.py  models.py
clients/slack/: __init__.py  __main__.py
clients/terraformio/: __init__.py  __main__.py
clients/tkts/jira/: __init__.py  __main__.py
dlux/: README.md
dlux/sqlfinger/: __init__.py
docs/: FEATURES.md  alert-activities.puml  data-programs.puml
dossier/: README.md  __init__.py  __main__.py  models.py
instrumentation/: __main__.py  instrumentation.ino  segmentdisps.ino  voice.ino
jarvis/: README.md  __main__.py
meet/: Makefile  __init__.py  __main__.py
meet/screenshots/: __main__.py
meet/service/: __init__.py
meet/static/: index.html
slides/: __main__.py
status/: __main__.py
syndicate/: __main__.py
syndicate/sheets/: __init__.py  __main__.py
tbd/: README.md  __main__.py  models.py
tbd/impact/: __init__.py
tbd/schema/: __init__.py
tests/: test_cli_exec.py  test_cli_list.py  test_cli_tui_watch.py  test_cli_update_tail.py  test_mcp_resources.py  test_models.py  test_storage.py  test_storage_update.py  test_trello_backend.py  test_trello_integration.py
tkts/: BACKENDS.md  NCURSES_PRD.md  README.md  TRELLO_PRD.md  __init__.py  __main__.py  api.py  backends.py  mcp_server.py  models.py  ncurses_tui.py  storage.py  trello_backend.py  trello_client.py
tkts/trello/: __init__.py  __main__.py  backend.py  client.py
widget/: __init__.py  __main__.py  gh-open-prs.py  pr-viewer.py  rumps_dock.py  tkl-is-ok.py
