[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blunt"
version = "0.0.1"
description = "Automating the Blunt end of the office."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "trevor", email = "trevor@trevorgrayson.com" }]
urls = { Homepage = "https://trevorgrayson.com" }

dependencies = [
  "ics",
  "openai",
  "pyserial",
  "pyyaml",
  "requests",
  "rumps",
]

[project.optional-dependencies]
clients = [
  "atlassian-python-api",
  "confluent-kafka",
  "matplotlib",
  "networkx",
  "plotille",
  "slack_sdk",
]
meet = [
  "fastapi",
  "pydantic",
]
all = [
  "atlassian-python-api",
  "confluent-kafka",
  "fastapi",
  "matplotlib",
  "networkx",
  "plotille",
  "pydantic",
  "slack_sdk",
]

[project.scripts]
blunt = "widget:main"
meet = "meet:main"
tbd = "tbd.__main__:main"
dossier = "dossier:main"
"cal.blunt" = "cal.__main__:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cal",
  "cal.*",
  "clients",
  "clients.*",
  "dossier",
  "dossier.*",
  "instrumentation",
  "instrumentation.*",
  "meet",
  "meet.*",
  "slides",
  "slides.*",
  "status",
  "status.*",
  "tbd",
  "tbd.*",
  "tkts",
  "tkts.*",
  "widget",
  "widget.*",
]
namespaces = true
