[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blunt"
version = "0.0.1"
description = "Automating the Blunt end of the office."
authors = [{ name = "trevor grayson", email = "trevor@trevorgrayson.com" }]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "ics",
  "PyYAML",
  "requests",
  "rumps; sys_platform == 'darwin'",
]
keywords = ["cli", "productivity", "google-sheets"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.scripts]
blunt = "widget:main"
meet = "meet:main"
# tbd = "tbd.__main__:main"
dossier = "dossier:main"
"blunt.cal" = "cal.__main__:main"
syndicate = "syndicate.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tkts*", "tests*", "venv*", ".venv*", "build*", "dist*"]
